# Chat-Bot

./: .env.mac  .env.nas  .gitignore  2026-04-13-190515-command-messagesuperpowers-workflowcommand-me.txt  CLAUDE.md  IMPROVEMENT_PLAN.md  dev.sh  docker-compose.yml  docker.sh
backend/: .env.example  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
backend/app/: main.py
backend/app/agents/: __init__.py  routes.py  schemas.py  service.py
backend/app/agents/prompts/: __init__.py  general.py  programmer.py  writer.py
backend/app/api/v1/: agent.py  chat.py  memory.py  model.py  router.py  rule.py  upload.py
backend/app/core/: config.py  exceptions.py
backend/app/middleware/: security.py
backend/app/repositories/: __init__.py
backend/app/schemas/: agent.py  base.py  chat.py  memory.py  rule.py  sse.py
backend/app/services/: agent_service.py  chat_service.py  memory_service.py  rule_service.py  upload_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py  openai_provider.py
backend/app/utils/: sse.py
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/common/: stream-events.ts
backend/src/common/entities/: agent.entity.ts  calendar-event.entity.ts  job-execution.entity.ts  job.entity.ts  memory.entity.ts  message.entity.ts  notification.entity.ts  rule.entity.ts  session.entity.ts  setting.entity.ts
backend/src/common/filters/: http-exception.filter.ts
backend/src/config/: config.service.ts
backend/src/middleware/: rate-limit.middleware.ts  security.middleware.ts
(+259 files in other folders)
