[project]
name = "backend"
version = "0.1.0"
description = "Chat Bot API with SSE streaming support"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "openai>=1.60.0",
    "httpx>=0.28.0",
]
